--- a/server/static/html/index.html
+++ b/server/static/html/index.html
@@ -27,7 +27,7 @@
                   <li><a rel="sketch" href="#demo=lines.pde">Linear</a></li>
                   <li><a rel="sketch" href="#demo=world.pde">Worlds</a></li>
                   <li><a rel="sketch" href="#demo=droplets.pde">Rainy Day</a></li>
-                  <li><a rel="sketch" href="#demo=diagnostic.pde">Diagnostica</a></li>
+                  <li><a rel="sketch" href="#demo=equaline.pde">Equalizish</a></li>
                 </ul>
               </li>
           </ul>
